@@ -378,6 +378,18 @@ extern int sacctmgr_archive_dump(int argc, char *argv[])
 	}
 
 	rc = jobacct_storage_g_archive(db_conn, arch_cond);
+	if(rc == SLURM_SUCCESS) {
+		if(commit_check("Would you like to commit changes?")) {
+			acct_storage_g_commit(db_conn, 1);
+		} else {
+			printf(" Changes Discarded\n");
+			acct_storage_g_commit(db_conn, 0);
+		}
+	} else {
+		exit_code=1;
+		fprintf(stderr, " Problem dumping archive\n");
+		rc = SLURM_ERROR;
+	}
 	destroy_acct_archive_cond(arch_cond);
 	
 	return rc;
